edits to intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -123,19 +123,19 @@
                 <p>Key Findings</p>
                 <p>Consumers</p>
                 <ul>
-                  <li><p>Consumers are 10% more willing to support cultural events that support a cause than a tangible product</p></li>
-                  <li><p>Consumers are 10% more willing to support products and events that yield a monetary donation to a cause vs those that raise awareness.</p></li>
-                  <li><p>Consumers express an interest in making decisions based on facts rather than emotion.</p></li>
+                  <li><p>10% more willing to support cultural events that support a cause than a tangible product</p></li>
+                  <li><p>10% more willing to support products and events that yield a monetary donation to a cause vs those that raise awareness.</p></li>
+                  <li><p>Express an interest in making decisions based on facts rather than emotion.</p></li>
                   <li><p>Prefer to see data in interactive graphics rather than static charts and lists.</p></li>
                 </ul>
                 <p>Business Leaders</p>
                 <ul>
-                  <li><p>88% of business leaders view community needs as fluid and evolving over time but only 63% indicate that they know what's important to their audience.</p></li>
+                  <li><p>88% view community needs as fluid and evolving over time but only 63% indicate that they know what's important to their audience.</p></li>
                   <li><p>54% don't feel empowered to enact a social impact int heir workplace.</p></li>
-                  <li><p>50% believe the optics and attitude toward the brand are more important than a measured improvement in the social issue of choice or an increase in revenue when asessing the success. Less than 1/3 (29.17% believe that improving the issue is the most important  measure of success)</p></li>
+                  <li><p>50% believe the optics and attitude toward the brand are more important than a measured improvement in the social issue of choice or an increase in revenue when asessing the success. Less than 1/3 (29.17% believe that improving the issue is the most important  measure of success).</p></li>
                   <li><p>25% are interested in gaining the interest of millennials, aged 25 - 34.</p></li>
                 </ul>
-                <button onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=204261602379595463300806&h2=Survey-Analysis');">View Full Analysis</button>
+                <button class="full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=204261602379595463300806&h2=Survey-Analysis');">View Full Analysis</button>
 
 
 
@@ -237,7 +237,7 @@
 
                 </div> -->
 
-                <button onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=272577681900394187316214&h2=Competitive-Analysis:-Impactua');">View Full Analysis</button>
+                <button class="full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=272577681900394187316214&h2=Competitive-Analysis:-Impactua');">View Full Analysis</button>
                 <!-- <table class="swot-chart">
                   <td class = "swot-logo1" colspan="4">
                       <img src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
@@ -407,7 +407,7 @@
 
         <button class="all-wireframes" onClick="window.open('https://www.dropbox.com/sh/jfaug4v6ysqur7f/AAAUy1GTk4JySigpmZZWQ50ea?dl=0');">View all Wireframes</button>
 
-        <div class="user-testing">
+        <!-- <div class="user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
             <p>I recruited three user testers to evaluate the protoype’s usability. They were asked to complete three tasks.</p>
               <ul>
@@ -419,7 +419,7 @@
             <p> <strong class=chart-emphasis>Key Takeaways</strong></p>
             <p>I should revisit the availability of the free signup pathway and the wording of the buttons on the landing page to better indicate how a new user can get started.</p>
             <p>I need to consider adjusting a future testing script to better reflect the sorts of concerns that I expect to arise during testing and I need to be more explicit about the directions given, such as asking users to sign up for the premium account rather than leaving the choice up to them.</p>
-            </div>
+            </div> -->
 
 
         <section class="branding-indented1">
@@ -437,11 +437,15 @@
               <p>The client wanted to include bullhorn imagery, reminiscent of marches and grassroots action in the logo. This was kept in mind when it was time to sketch early concepts.</p>
               <img class="logo-sketches" src="intent_partners_images/logo_sketches.png" alt="Logo Sketches">
               <p>Early sketches were preference tested for clarity on which images were most pleasing to viewers and results showed that two options  performed the best, each garnering 33%  of votes.</P>
-              <img class="intent-logo-option-1" src="intent_partners_images/option_1.png" alt="Logo option 1">
-              <img class="intent-logo-option-2" src="intent_partners_images/option_2.png" alt="Logo option 2">
+              <div class="intent-logo-round">
+                <img class="intent-logo-option-1" src="intent_partners_images/option_1.png" alt="Logo option 1">
+                <img class="intent-logo-option-2" src="intent_partners_images/option_2.png" alt="Logo option 2">
+              </div>
               <p>Both were refined and preference tested directly against one another. While both included the bullhorn imagery, option 1 is markedly more creative, and visually engaging, but possibly too busy to meet the clean and simple aesthetic that's desires. Option 2 is clean, and easy to read but perhaps too common feeling. </p>
-              <img class="intent-logo-option-1" src="intent_partners_images/logos/option_1_refined.png" alt="Logo option 1">
-              <img class="intent-logo-option-2" src="intent_partners_images/logos/option_2_refined.png" alt="Logo option 2">
+              <div class="intent-logo-round">
+                <img class="intent-logo-option-1" src="intent_partners_images/logos/option_1_refined.png" alt="Logo option 1">
+                <img class="intent-logo-option-2" src="intent_partners_images/logos/option_2_refined.png" alt="Logo option 2">
+              </div>
               <p>While the results were pretty evenly divided, the comments brought some things to light. Readability was a issue in option 1 but it was preferred for its “cleverness”. Option 2 didn't flow and the hand wasn't … preferred, but it was more “readable”.  How could I keep things clever but still readable? I went back to the drawing board to rustle up new ideas.</p>
               <img class="logo-sketches" src="intent_partners_images/logos/logos_reconsidered.jpg" alt="Logos Reconsidered">
               <p>Ultimately a refinement of option 1 accounting for the common concerns proved the strongest option.</p>
@@ -522,50 +526,17 @@
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/Homepage.png" alt="Landing Page Mockup">
             </div>
 
-            <h3>Final Revisions</h3>
-            <div class="test-images1">
-              <img class="button-test" src="images/Preference-Testing/button-styles.png" alt="Button Styles">
-              <img class="dashboard-test"  src="images/Preference-Testing/insights-dashboards.png" alt="Insights Dashboard Tests">
-            </div>
-            <div class="test-images2">
-              <img class="homepage-test1"  src="images/Preference-Testing/homepage1.png" alt="Homepage Test 1">
-              <img class="homepage-test2"  src="images/Preference-Testing/homepage1.png" alt="Homepage Test 2">
-            </div>
-            <p>I discovered that a solid blue button style, a one-screen dashboard view and direct, unquestioning text were overwhelmingly preferred. These revelations guided me as made a few changes before retesting my prototype.</p>
-          </div>
-          <div class="user-testing-hifi">
-            <h3>User Testing the Hi-Fi Mockup</h3>
-            <p>Once again, I recruited three user testers to evaluate the prototype’s usability. They were asked to complete three tasks.</p>
-            <ul>
-              <li><p>1. Sign up for an account</p></li>
-              <li><p>2. Add a piece of contentt</p></li>
-              <li><p>3. Organize a piece of content</p></li>
-            </ul>
-            <p><strong class="chart-emphasis"> Key Takeaways</strong></p>
-            <p>Following testing, I concluded that the application is best used by those with some existing familiarity with mobile applications, such as my target audience. One of the usability testers had limited experience with mobile applications and struggled with identifying visual cues indicating next steps. Further consideration could be given to engaging users with limited experience, but this called for a design approach that would be overly explanatory for our target user. Even users familiar with mobile apps appeared to be in need of better cues and directions in menu navigation.</p>
-          </div>
+
           <div class="final-revisions">
             <h3>Final Revisions</h3>
-            <p>I considered that usability testers were having difficulty in determining which upload option to use to create a new product. While they ultimately did it successfully, it required multiple attempts and consideration to determine which menu options to use so I adjusted the menu options. </p>
-            <div class="revision screens">
-              <img class="menus" src="images/Final-Revisions/menus.png" alt="menu evolution">
+            <p>The prototype was further refined based on feedback on the typography. Improvements to sizing, spacing and content clarity improve the prototype experience.</p>
+            <div class=hifi-group>
+              <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_4/Homepage.png" alt="Landing Page Mockup">
             </div>
-            <p>Based on design critique feedback, I made improvements to the empty state dashboards, providing a boundary to more clearly indicate the emptiness of the repository and including a call to action to “add your first file”.</p>
-            <div class="revision screens">
-              <img class="empty-state-dashboards" src="images/Final-Revisions/dashboard.png" alt="empty state dashboard evolution">
-            </div>
-            <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>
-            <h3> In Closing</h3>
-            <p>Verve satisfies the client brief by successfully pursuing a unique entry into the cloud storage market for a wellness and productivity-minded consumer. With the client brief providing a strong framework within which to explore and develop the idea, the end product's design  is truly driven by user research and testing so that the client sees optimal results in monetizing the product.</p>
-            <div class="revision-screens">
-              <img class="hifi-pic" src="images/Final-Revisions/landing-page.png" alt="Landing Page Mockup">
-              <img class="hifi-pic" src="images/Final-Revisions/new-user-dashboard.png" alt="Empty State Dashboard Mockup">
-              <img class="hifi-pic" src="images/Final-Revisions/existing-user.png" alt="Existing User Dashboard Mockup">
-              <img class="hifi-pic" src="images/Final-Revisions/product-view.png" alt="Product Page Mockup">
-              <img class="hifi-pic" src="images/Final-Revisions/activity-detail-view.png" alt="Activity View Mockup">
-              <img class="hifi-pic" src="images/Final-Revisions/note-view.png" alt="Note View Mockup">
 
-            </div>
+            <h3> In Closing</h3>
+            <p>Intent Partners presented the challenge to create a digital brand and presence for their consultancy as they move forward in formally establishing their organization. While they had a wide breadth of accomplishments credited to them, the vision was not fully articulated and reflective of current market and user needs. After investigating both and iteratively testing solutions to meet both the consumer need for social impact transparency and business need for local access, we have designed an MVP Product to position Intent Partners as a unique consultancy that offers not only their expertise, but a growing set of digital tools that empower any user to encourage and support the conversation around corporate social impact.</p>
+
             <button class = "endprototype" onClick="window.open('https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down');">View the Prototype</button>
           </div>
           </section>
