added personas & typographic studies to intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -146,9 +146,11 @@
                 <p>Personas were constructed to summarize and represent the user research data. </p>
             </div>
           </div>
-        <div class="discovery-section2">
-          <img class="molly" src="images/molly-persona.svg" alt="Persona 1">
-          <img class="angelica" src="images/angelica-persona.svg" alt="Persona 2">
+        <div class="intent-discovery-section2">
+          <img class="molly" src="intent_partners_images/user_personas/Group 7.svg" alt="Persona 1">
+          <img class="angelica" src="intent_partners_images/user_personas/Group 7.2.svg" alt="Persona 2">
+          <img class="angelica" src="intent_partners_images/user_personas/Group 7.1.svg" alt="Persona 3">
+
         </div>
         <div class="discovery-section3">
             <div class="competitive-analysis">
@@ -461,8 +463,8 @@
           </section>
 
         <div class="type-chart">
-          <img class="type-study-1" src="images/Branding/typography1.png" alt="Typestudy part 1">
-          <img class="type-study-2" src="images/Branding/typography2.png" alt="Typestudy part 2">
+          <img class="type-study-1" src="intent_partners_images/style_guide/typography_top.png" alt="Typestudy part 1">
+          <img class="type-study-2" src="intent_partners_images/style_guide/typography_desktop.png" alt="Typestudy part 2">
         </div>
 
         <section class="branding-indented3">
@@ -557,9 +559,12 @@
           <a href="#top">
             <h4 class="top-text" >top</h4>
           </a>
-          <h4 class="next-text">next</h4>
-          <img class="next" src="images/icons/right-arrow.png" alt="Next Icon">
-
+          <a class="next-text" href="projectgridversion.html">
+            <h4 class="next-text">next</h4>
+          </a>
+          <a href="projectgridversion.html">
+            <img class="next"  src="images/icons/right-arrow.png" alt="Next Icon">
+          </a>
         </div>
 
         <footer class="verve-footer">
