Updating user research section on intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -118,23 +118,42 @@
 
         <div class="discovery-section1">
             <h2>Discovery & Research</h2>
+
             <div class="user-survey">
-                <h3>User Survey</h3>
-                <p>Key Findings</p>
-                <p>Consumers</p>
-                <ul>
-                  <li><p>10% more willing to support cultural events that support a cause than a tangible product</p></li>
-                  <li><p>10% more willing to support products and events that yield a monetary donation to a cause vs those that raise awareness.</p></li>
-                  <li><p>Express an interest in making decisions based on facts rather than emotion.</p></li>
-                  <li><p>Prefer to see data in interactive graphics rather than static charts and lists.</p></li>
-                </ul>
-                <p>Business Leaders</p>
-                <ul>
-                  <li><p>88% view community needs as fluid and evolving over time but only 63% indicate that they know what's important to their audience.</p></li>
-                  <li><p>54% don't feel empowered to enact a social impact int heir workplace.</p></li>
-                  <li><p>50% believe the optics and attitude toward the brand are more important than a measured improvement in the social issue of choice or an increase in revenue when asessing the success. Less than 1/3 (29.17% believe that improving the issue is the most important  measure of success).</p></li>
-                  <li><p>25% are interested in gaining the interest of millennials, aged 25 - 34.</p></li>
-                </ul>
+                <h3>User Survey Key Findings</h3>
+                <h4>Consumers</h4>
+                <div class="user-research-flex">
+                  <div>
+                    <h2 class="research-findings-title">Experience Over Product</h1>
+                    <h2 class="research-findings-body">10% more willing to support cultural events that support a cause than a tangible product</h6>
+                  </div>
+                  <div>
+                    <h2 class="research-findings-title">Measurable Contributions</h1>
+                    <h2 class="research-findings-body">10% more willing to support products and events that yield a monetary donation to a cause vs those that raise awareness.</h6>
+                  </div>
+                  <div>
+                    <h2 class="research-findings-title">Seeking clarity</h1>
+                    <h2 class="research-findings-body"> Express an interest in making decisions based on facts rather than emotion</h6>
+                  </div>
+                </div>
+
+                <h4>Business Leaders</h4>
+
+                <div class="user-research-flex">
+                  <div>
+                    <h2 class="research-findings-title">Know they’re out of touch</h1>
+                    <h2 class="research-findings-body">88% view community needs as fluid and evolving over time but only 63% indicate that they know what's important to their audience.</h6>
+                  </div>
+                  <div>
+                    <h2 class="research-findings-title">Need to be empowered</h1>
+                    <h2 class="research-findings-body">54% don't feel empowered to enact a social impact int heir workplace.</h6>
+                  </div>
+                  <div>
+                    <h2 class="research-findings-title">Misinterpreting consumer interest</h1>
+                    <h2 class="research-findings-body">Less than 1/3 (29.17% believe that improving the issue is the most important measure of success).</h6>
+                  </div>
+                </div>
+
                 <button class="full-analysis" onClick="window.open('https://paper.dropbox.com/doc/User-Market-Research-Intent-Partners-Social-Impact-Consultants--Ajx9IjaZcnrCHozBXiKV2x2WAg-hHkzSr7cHtmd3wvVKVdbs#:uid=204261602379595463300806&h2=Survey-Analysis');">View Full Analysis</button>
 
 
