more updates to user research section on intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -119,7 +119,7 @@
         <div class="discovery-section1">
             <h2>Discovery & Research</h2>
 
-            <div class="user-survey">
+            <div class="intent-user-survey">
                 <h3>User Survey Key Findings</h3>
                 <h4>Consumers</h4>
                 <div class="user-research-flex">
