updates to user research setion, logo sketch alignments & color palette

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -175,7 +175,7 @@
             <div class="competitive-analysis">
                 <h3>Competitive Analysis</h3>
                 <p>Impactual,  Do Something Strategic,  and Bridgespan Group are three consultancies that take a unique apporoch to advising their clients on developing powerful  social impact initiatives. Impactual touts it focus on real impact over optics, Do Something Strategic provides unique access to proprietary data on the Gen Z and millennial audience, and veteran leader, Bridgespan Group advises change-making organizations and investors.</p>
-                <p>While they all use story telling to demonstrate their individual acumen, none tackle the needs expressed by users, such as provide a transparent tool for consumers to identify real-impact focused businesses, proprietary opportunity discovery and  impact managing tools, and resources to activate the corporate workforce as impact evangelists. </p>
+                <p>While they all use story telling to demonstrate their individual acumen, none tackle the needs expressed by users, such as providing a transparent tool for consumers to identify real-impact focused businesses, proprietary opportunity discovery and  impact managing tools, and resources to activate the corporate workforce as impact evangelists. </p>
 
                 <!-- <div class="swot-grid">
                   <img class="google-logo" src="images/Competitor-Logos/googledrive.png" alt="Google Logo">
@@ -489,10 +489,7 @@
         <section class="branding-indented3">
           <div class="color-palette">
             <h3>Color Pallete and Style Guide</h3>
-            <p>I began to research which colors that would help users establish expectations early on in their interaction with the app.  I considered what various colors and combinations would convey, energy, health, wellness and purity. I looked at the colors used by competitors and started out with preference testing a few color palettes.
-            <p>A blue tone palette was preferred by 63% of respondents. This confirmed my early inclinations about colors that would be suitable. I also found that blue was heavily used by competitors and color theory research revealed that this is a reliable and trusted choice, so not an unpopular one.</p>
-            <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
-            <p>Based on client feedback, I made slight adjustments to the palette and decided to use a gradient shade of blue as the primary color, in combination with a gradient shade of pink, in combination with gray, white, black and yellow.</p>
+            <p>The color palette chosen included a selection of rich jewel tones and coordinating tints for a simple, bold and energetic appeal.</p> 
             <div class= "colors">
               <img class="intent-final-colors" src="intent_partners_images/colors/color1.png" alt="Brand color 1">
               <img class="intent-final-colors" src="intent_partners_images/colors/color2.png" alt="Brand color 2">
@@ -545,6 +542,7 @@
             <p>Testing indicated that tools would be better named “maps” as it better indicates to less saavy users what to expect.  Results would be better called “case studies” for the same reason. Changing these labels to be more intuitive will make it easier for an inexperienced user to navigate the site.</p>
             <div class=hifi-group>
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/Homepage.png" alt="Landing Page Mockup">
+              <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/intent_map.png" alt="Landing Page Mockup">
             </div>
 
 
