final edits to intent partners case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -129,11 +129,11 @@
                   </div>
                   <div>
                     <h2 class="research-findings-title">Measurable Contributions</h1>
-                    <h2 class="research-findings-body">10% more willing to support products and events that yield a monetary donation to a cause vs those that raise awareness.</h6>
+                    <h2 class="research-findings-body">10% more willing to support products and events that yield a monetary donation to a cause over those that raise awareness.</h6>
                   </div>
                   <div>
                     <h2 class="research-findings-title">Seeking clarity</h1>
-                    <h2 class="research-findings-body"> Express an interest in making decisions based on facts rather than emotion</h6>
+                    <h2 class="research-findings-body"> Most express an interest in making decisions based on facts rather than emotion</h6>
                   </div>
                 </div>
 
@@ -142,14 +142,14 @@
                 <div class="user-research-flex">
                   <div>
                     <h2 class="research-findings-title">Know they’re out of touch</h1>
-                    <h2 class="research-findings-body">88% view community needs as fluid and evolving over time but only 63% indicate that they know what's important to their audience.</h6>
+                    <h2 class="research-findings-body">88% view community needs as fluid and evolving over time, but only 63% indicate that they know what's important to their audience.</h6>
                   </div>
                   <div>
                     <h2 class="research-findings-title">Need to be empowered</h1>
-                    <h2 class="research-findings-body">54% don't feel empowered to enact a social impact int heir workplace.</h6>
+                    <h2 class="research-findings-body">54% don't feel empowered to enact a social impact in their workplace.</h6>
                   </div>
                   <div>
-                    <h2 class="research-findings-title">Misinterpreting consumer interest</h1>
+                    <h2 class="research-findings-title">Detached from Community</h1>
                     <h2 class="research-findings-body">Less than 1/3 (29.17% believe that improving the issue is the most important measure of success).</h6>
                   </div>
                 </div>
@@ -379,12 +379,14 @@
         </section>
 
         <section class="information-architecture-indented3">
-          <p>After initially creating one large flow to represent the three main processes users would undertake, I divided them into four user flow groups to be more digestible:
+          <p>Five user flows were created to document the path users would need to follow to achieve key user stories.
             <ul>
               <li><p>1. View introduction and services offered</p></li>
               <li><p>2. Verify outcomes via case studies</p></li>
               <li><p>3. View the community needs map to identify opportunities to help</p></li>
               <li><p>4. View the intent map showing companies with Intent</p></li>
+              <li><p>5. View the the revelevant contact, social media and mailing list information</p></li>
+
             </ul>
         </section>
 
@@ -399,7 +401,7 @@
 
         <div class="site-map-and-content">
           <h3>Site Map & Content Strategy</h3>
-          <p>I evaluated the user flows and created a site map to document the pages/sections needed to be constructed for a user to achieve each flow. I then creates sketches and wireframes to determine how to best visually represent the components of the map. Knowing what a potential layout may look like allowed me to begin to consider the text and graphical content required to most efficiently communicate what was necessary in each area of the web app.
+          <p>I evaluated the user flows and created a site map to document the pages/sections needed to be constructed for a user to achieve each flow. I then created sketches and wireframes to determine how to best visually represent the components of the map. Knowing what a potential layout may look like allowed me to begin to consider the text and graphical content required to most efficiently communicate what was necessary in each area of the web app.
             </P>
           <p>As I was working on this, I considered how to best structure menus, what deserved a seperate page and what would be best shown on a scrolling one page landing.</P>
           <p>So how would these pages tell the story? The content needed to cover all the bases so extensive thought went into what each area of the site would contain and it was compiled to begin strategizing a plan. </p>
@@ -455,7 +457,7 @@
             </div>
             <div class="logo-design">
               <h3>Logo Design</h3>
-              <p>The client wanted to include bullhorn imagery, reminiscent of marches and grassroots action in the logo. This was kept in mind when it was time to sketch early concepts.</p>
+              <p>Because the client wanted to include bullhorn imagery, reminiscent of marches and grassroots action in the logo, this was kept in mind when it was time to sketch early concepts.</p>
               <img class="logo-sketches" src="intent_partners_images/logo_sketches.png" alt="Logo Sketches">
               <p>Early sketches were preference tested for clarity on which images were most pleasing to viewers and results showed that two options  performed the best, each garnering 33%  of votes.</P>
               <div class="intent-logo-round">
@@ -488,8 +490,8 @@
 
         <section class="branding-indented3">
           <div class="color-palette">
-            <h3>Color Pallete and Style Guide</h3>
-            <p>The color palette chosen included a selection of rich jewel tones and coordinating tints for a simple, bold and energetic appeal.</p> 
+            <h3>Color Palette and Style Guide</h3>
+            <p>The color palette chosen included a selection of rich jewel tones and coordinating tints for a simple, bold and energetic appeal.</p>
             <div class= "colors">
               <img class="intent-final-colors" src="intent_partners_images/colors/color1.png" alt="Brand color 1">
               <img class="intent-final-colors" src="intent_partners_images/colors/color2.png" alt="Brand color 2">
@@ -503,13 +505,13 @@
               <img class="intent-final-colors" src="intent_partners_images/colors/color10.png" alt="Brand color 10">
             </div>
             <p>A full suite of branding guidelines were defined and would continue to evolve as the project developed.</p>
-            <button onClick="window.open('https://www.figma.com/proto/RfbwhkAeB4sWwogLNMTyD4co/Verve-Final-Style-Guide-and-Mockups-Prototype?node-id=0%3A1&viewport=400%2C325%2C0.04107077419757843&scaling=min-zoom');">View the Style Guide</button>
+            <button onClick="window.open('https://www.dropbox.com/s/c3axt8sx696epbp/Branding%20Guide.pdf?dl=0');">View the Style Guide</button>
 
           </div>
           <div class="intent-hifi-mockups">
             <h3>High Fidelity Mockups</h3>
             <p>Several improvements were considered and defined moving from wireframe to high fidelity mock-up. For instance,  adding calls to action in spaces where they added usability value but weren’t decidedly necessary earlier for minimum functionality.</p>
-            <p>Choosing compelling imagery that was engaging and not over illustrative to the point of being cliche proved challenging. I chose to focus on imagery that captured the spirit and essence of the company’s modern and youthful yet mature perspective.</p>
+            <p>Choosing compelling imagery that was engaging and not overly illustrative to the point of being cliche proved challenging. I chose to focus on imagery that captured the spirit and essence of the company’s modern and youthful, yet mature perspective.</p>
             <div class=hifi-group>
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_1/Homepage.png" alt="Landing Page Mockup">
             </div>
@@ -517,16 +519,15 @@
             <p>Mockups were reviewed for opportunities for improvement. Recommendations primarily centered on improving typography in ways such as:</p>
               <ul>
                 <li><p>1. Reduce the height of the header and increasing font weight for improved accessibility</p></li>
-                <li><p>2. Making Team members professional titles smaller and closer under names<p></li>
+                <li><p>2. Make team members professional titles smaller and closer under names<p></li>
                 <li><p>3. Make footer text smaller than subscribe section<p></li>
                 <li><p>4. Ensure all text adheres to maximum characters per line guidelines<p></li>
                 <li><p>5. Use Typescale to define better typography sizing<p></li>
               </ul>
             <p>Additional recommendations included adding a sub-header to the hero images for a clearer introduction to the content.</p>
-            <div class=hifi-group>
+            <div class="intent-hifi-group">
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_2/Homepage.png" alt="Landing Page Mockup">
             </div>
-            <button class="all-hifi" onClick="window.open('https://www.figma.com/file/yUBzhV5qy2T0qpGQpnRr6j/Verve-Hi-Fidelity-Mockup-and-Prototype?node-id=46378%3A4647');">View all Hi-Fi Mockups</button>
           </div>
           <div class="intent-user-tests">
             <h3>User Testing the Hi-fi Mockup</h3>
@@ -538,9 +539,9 @@
               <li><p>4. Visit the intent map and search for local concerts. View concert details and read more information.</p></li>
               <li><p>5. Visit the contact page and write Intent Partners a message.</p></li>
             </ul>
-            <p>My users included David Blanchard, age 34, Pharmacist, of North Plainfield, NJ, an active and experienced web user and Sophia Mckenzie, age 55, Estate Manager of Brooklyn, NY, an avid browser with limited comfort with electronic devices.</p>
+            <p>My users included David Blanchard, age 34, Pharmacist, of North Plainfield, NJ, an active and experienced web user and Sophia Mckenzie, age 55, Estate Manager, of Brooklyn, NY, an avid browser with limited comfort with electronic devices.</p>
             <p>Testing indicated that tools would be better named “maps” as it better indicates to less saavy users what to expect.  Results would be better called “case studies” for the same reason. Changing these labels to be more intuitive will make it easier for an inexperienced user to navigate the site.</p>
-            <div class=hifi-group>
+            <div class="intent-hifi-group">
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/Homepage.png" alt="Landing Page Mockup">
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/intent_map.png" alt="Landing Page Mockup">
             </div>
@@ -552,11 +553,12 @@
             <div class=hifi-group>
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_4/Homepage.png" alt="Landing Page Mockup">
             </div>
+            <button class="intent-all-hifi" onClick="window.open('https://www.dropbox.com/sh/wwe31aled5ewrwf/AAAFBK37ObAGqch3gjFAWhhIa?dl=0');">View all Hi-Fi Mockups</button>
 
             <h3> In Closing</h3>
             <p>Intent Partners presented the challenge to create a digital brand and presence for their consultancy as they move forward in formally establishing their organization. While they had a wide breadth of accomplishments credited to them, the vision was not fully articulated and reflective of current market and user needs. After investigating both and iteratively testing solutions to meet both the consumer need for social impact transparency and business need for local access, we have designed an MVP Product to position Intent Partners as a unique consultancy that offers not only their expertise, but a growing set of digital tools that empower any user to encourage and support the conversation around corporate social impact.</p>
 
-            <button class = "endprototype" onClick="window.open('https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down');">View the Prototype</button>
+            <button class = "endprototype" onClick="window.open('https://invis.io/PFT4GH4R2AQ#/375165448_Homepage');">View the Prototype</button>
           </div>
           </section>
 
