--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -521,7 +521,7 @@
 
         <section class="branding-indented3">
           <div class="color-palette">
-            <h3>Color Pallete and Style Guide</h3>
+            <h3>Color Palette and Style Guide</h3>
             <p>I began to research which colors that would help users establish expectations early on in their interaction with the app.  I considered what various colors and combinations would convey, energy, health, wellness and purity. I looked at the colors used by competitors and started out with preference testing a few color palettes.
             <p>A blue tone palette was preferred by 63% of respondents. This confirmed my early inclinations about colors that would be suitable. I also found that blue was heavily used by competitors and color theory research revealed that this is a reliable and trusted choice, so not an unpopular one.</p>
             <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
